test/bad/coord4.pacc
/*
nocc 'parse.pacc: In function ‘pacc_parse’:
parse.pacc:9:32: error: incompatible types when assigning to type ‘struct nonsense’ from type ‘int’'
*/

/* Test that braceless numbers carry coords. */

{ struct nonsense { int x; }; }
S :: struct nonsense <- "foo" -> 5
